--- a/package.json
+++ b/package.json
@@ -7,12 +7,30 @@
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "mix --production"
+        "production": "mix --production",
+        "lint": "eslint --ext .js,.vue resources/js/"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^6.2.0",
+        "@popperjs/core": "^2.10.2",
         "axios": "^0.21",
+        "bootstrap": "^5.1.3",
+        "eslint": "^8.27.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-vue": "^9.7.0",
+        "eslint-webpack-plugin": "^3.2.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
+        "vue": "^2.6.12",
+        "vue-loader": "^15.9.8",
+        "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "bootstrap-vue": "^2.23.1",
+        "laravel-mix-eslint": "^0.2.0"
     }
 }
