--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     },
     "dependencies": {
         "bootstrap-vue": "^2.23.1",
-        "laravel-mix-eslint": "^0.2.0"
+        "laravel-mix-eslint": "^0.2.0",
+        "nes.icons": "^2.0.1"
     }
 }
